--- a/_pages/javascript-cheat-sheet.html
+++ b/_pages/javascript-cheat-sheet.html
@@ -1,7 +1,7 @@
 ---
-layout: default
+layout: notebook
 title: 'JavaScript cheat sheet'
-date: '2018-07-23 12:30:00'
+date: '2018-08-20 12:30:00'
 permalink: javascript-cheat-sheet/
 disqus_id: javascript-cheat-sheet
 ---
